--- a/manoj.html
+++ b/manoj.html
@@ -28,8 +28,8 @@
             <a href="#">Download My Profile</a>
         </div>
         <div class="images">
-            <img src="images/design.png" class="shape" width="1000">
-            <img src="images/pro.png" class="pro">
+            <img src="design.png" class="shape" width="1000">
+            <img src="pro.png" class="pro">
         </div>
     </div>
 
