--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
         </div>
         <div class="images">
-            <img src="images/design.png" class="shape" width="800">
-            <img src="images/pro.png" class="pro">
+            <img src="design.png" class="shape" width="800">
+            <img src="pro.png" class="pro">
         </div>
     </div>
 
